--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1733,107 +1733,107 @@ stories:
   domain: http://www.swiowanow.com/
   link: http://swiowanow.com/how-to-make-correct-and-suitable-design-decisions-for-your-childs-bedroom/
 images:
-- name: docks-docks-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dark-rain.jpg
-- name: castle-wall-DSC-0067-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-colorful-dream.JPG
-- name: old-barn-old-barn-1500-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-paper.jpg
-- name: oldbarn-oldbarn-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-neo-instinct.jpg
-- name: berlinwall2-berlinwall-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-soul.jpg
-- name: machine-road-machine-road-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colorful-dream.jpg
-- name: statue-of-liberty-front-view-statueofliberty-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-monet-one.jpg
-- name: machine-road-machine-road-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-matrix.jpg
-- name: machine-road-machine-road-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-satan-red.jpg
-- name: copper-circuit-IMG_6200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_6200.jpg
-- name: hollywood-building-hollywood-building-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-pablo-blue.jpg
-- name: desert-dragon-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-purp-paper.jpg
-- name: aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
-- name: christianity-christianity-under-construction-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gred-mash.jpg
-- name: old-house-oldhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kand-two.jpg
-- name: stalin-time-oxoford-circus-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-oxoford-circus-station.jpg
-- name: catacombs-catacombs-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-rainbow-festival.jpg
-- name: border-fence-border-fence-on-hill-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-circuit.jpg
-- name: beach-clouds-lifeguard-beachclouds-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purple-pond.jpg
-- name: san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
-- name: status-berlin-status-berlin-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-hot-spicy.jpg
-- name: la-muse-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-bridge-over-columbia.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-neo-instinct.jpg
-- name: old-door-lock-old-door-lock-2-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-ww2-color.jpg
-- name: old-door-lock-old-door-lock-2-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-pablo-blue.jpg
-- name: oldhouse-oldhouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-gred-mash.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-smoking-cigarette.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-smoking-cigarette.JPG
-- name: ellis-island-ellisisland-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-oily-mcoilface.jpg
-- name: old-church-oldchurch-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gred-mash.jpg
-- name: gears-4882162452-fa3126b38d-b-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-mucha-mult.jpg
-- name: walled-garden-walled-garden-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-internet-numbers.jpg
-- name: nazi-invasion-soliders-fighting-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-soliders-fighting-statue.jpg
-- name: curtain-curtain-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crunch-paper.jpg
-- name: downtown-street-view-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-street-view-leaflets-of-the-russian-revolution.jpg
-- name: carry-load-carryload-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-dresden.jpg
-- name: braceros-domingo-ulloa-old-gas-station_36588462091_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-gas-station_36588462091_o.jpg
-- name: border-crossing-bordercrossing-emily-carr.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-emily-carr.png
-- name: san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
-- name: miamibeach-miamibeach-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-purple-storm.jpg
-- name: rockingchair-rockingchair-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-yellow-paper.jpg
-- name: catacombs-catacombs-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-hot-spicy.jpg
-- name: containership-containership.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership.jpg
-- name: yuma-bank-yuma-bak-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crunch-paper.jpg
-- name: server-cloud-server-racks-clouds-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-monet-one.jpg
-- name: yosemite-yosemite-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-dali.jpg
-- name: mistywoods-babyfoot-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-colorful-blocks.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
-- name: braceros-domingo-ulloa-train-subway-125th-down-the-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-subway-125th-down-the-line.jpg
-- name: server-cloud-server-racks-door-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-gan-vogh.jpg
-- name: rain-princess-P5290036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P5290036.jpg
-- name: scream-IMG_8331.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8331.jpg
+- name: sand-hand-sand-hand-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dry-skin.jpg
+- name: old-church-oldchurch-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-marcel-duchamp.jpg
+- name: berlinwall-DSC-0084-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-satan-red.jpg
+- name: blossombar-aqua-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-50-62.jpg
+- name: copper-circuit-fishing-ship-in-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fishing-ship-in-docks.jpg
+- name: downtown-trucksilo-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-internet-numbers.jpg
+- name: powerlines-power-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-sand-paper.jpg
+- name: crow-crow-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-brush.jpg
+- name: udnie-IMG_6984.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6984.jpg
+- name: miamibeach-miamibeach-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-brush.jpg
+- name: store-on-corner-oldcabin-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purp-paper.jpg
+- name: sand-hand-sand-hand-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-nazi-poster.jpg
+- name: ellis-island-ellis-island-room.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room.jpg
+- name: mediterranean-mediterranean-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-crafty-painting.jpg
+- name: bordercrossing-bordercrossing-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-kand-two.jpg
+- name: stalin-time-castle-on-the-hill-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-castle-on-the-hill-windows.jpg
+- name: copper-circuit-working-waterfront-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-waterfront-2.jpg
+- name: ellis-island-ellis-island-room-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-light-dali.jpg
+- name: ellis-island-ellisisland-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-satan-red.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
+- name: statue-of-liberty-front-view-statueofliberty-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-really-hot.jpg
+- name: docks-docks-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-dresden.jpg
+- name: yuma-bank-yuma-bak-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-dali-two.jpg
+- name: nazi-invasion-freeway-carss-overpass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-freeway-carss-overpass.jpg
+- name: sand-hand-sand-hand-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-pablo-blue.jpg
+- name: berlinwall2-berlinwall-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-diego-rivera1.jpg
+- name: oldsmallboat-oldsmallboat-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-crafty-painting.jpg
+- name: white-house-lawn-white-house-window-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-internet-numbers.jpg
+- name: adam-smith-adam-smith-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-light-dali.jpg
+- name: lincoln-memorial-lincolnmemorial-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-post-modern.jpg
+- name: liberty-back-statue-liberty-back-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gan-vogh.jpg
+- name: braceros-domingo-ulloa-face-eyes-open-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-face-eyes-open-statue.jpg
+- name: white-house-lawn-white-house-lawn-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-deep-connections.jpg
+- name: powerlines-power-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-spagetti-accident.jpg
+- name: cargo-ship-cargo-ship-on-sea-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-graham-sutherland.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+- name: old-granary-field-granaryfield-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-green-zuma.jpg
+- name: blossombar-creativity-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-50-62.jpg
+- name: meadowbutterfly-meadow-butterfly-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-aqua.jpg
+- name: aws-s3-square-file-00-00-35-50-los-angeles-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-35-50-los-angeles-square.jpg
+- name: christianity-christianity-under-construction-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-plentiful.jpg
+- name: copper-circuit-hiding-monster-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-hiding-monster-statue.jpg
+- name: containership-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
+- name: status-berlin-status-berlin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-crafty-painting.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+- name: gypsymosaic-gypsy-eyes-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-constitution.jpg
+- name: bluelake-creativity-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-00-00.jpg
+- name: gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+- name: la-muse-border-crossing-through-fence-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-border-crossing-through-fence-2.jpg
 ---
 Ouachita Sweeps Home Wins Against Bismarck In Hot Spring County Hoops Showdown.&nbsp;Bali Bombers' Brother, Bomb Widow Become Friends, Seek Peace.&nbsp;Windham And Utica Highway To Get Turning Lanes.&nbsp;Renovating Your Kitchen What You Should Do?.&nbsp;Innovative Fashion Designers Lead The Way On Sustainability.&nbsp;Blind Bowler From New York.&nbsp;New Administrator On Board.&nbsp;Busy Year For Sanitary District.&nbsp;
